Fixed image alignment

--- a/assets/screen.css
+++ b/assets/screen.css
@@ -114,6 +114,21 @@ ul ul, ol ol {
 ul > li {
    margin-left: 1.4em;
 }
+
+body div.content [align="right"] {
+   margin-bottom: 1em;
+   margin-left: 1em;
+}
+
+body div.content img {
+   max-width: 100%;
+}
+
+img {
+   border: medium none;
+   vertical-align: bottom;
+}
+
 blockquote {
     margin: 0 60px 0 45px;
     border-left: 5px solid #ccc;
